--- a/composer.json
+++ b/composer.json
@@ -22,20 +22,26 @@
         "drupal/admin_toolbar": "^1.23",
         "drupal/animate_any": "^1.1",
         "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/colorbox": "^1.4",
+        "drupal/config_split": "^1.3",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
         "drupal/ctools": "^3.0",
+        "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^1.2",
         "drupal/entityqueue": "^1.0@alpha",
         "drupal/examples": "1.x-dev",
         "drupal/inline_entity_form": "^1.0@beta",
         "drupal/libraries": "^3.0@alpha",
         "drupal/page_manager": "^4.0@beta",
+        "drupal/panels": "^4.3",
+        "drupal/paragraphs": "^1.2",
         "drupal/pathauto": "^1.1",
         "drupal/phpmailer": "^3.0@beta",
         "drupal/recaptcha": "^2.3",
         "drupal/smtp": "1.x",
         "drupal/token": "^1.1",
+        "drupal/video_embed_field": "^2.0",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
