--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/entityqueue": "^1.0@alpha",
         "drupal/examples": "1.x-dev",
         "drupal/flexslider": "^2.0@beta",
+        "drupal/fontawesome_menu_icons": "^1.3",
         "drupal/inline_entity_form": "^1.0@beta",
         "drupal/libraries": "^3.0@alpha",
         "drupal/page_manager": "^4.0@beta",
